2005-10-26  John W. Eaton  <jwe@octave.org>

	Changes for GCC 4.1, tip from Arno J. Klaassen
	<arno@heho.snv.jussieu.fr>:

	* dSparse.h (real (const SparseComplexMatrix&)): 
	Publish externally used friend function.
	(imag (const SparseComplexMatrix&)): Likewise.

	* dColVector.h (real (const ComplexColumnVector&)):
	Publish externally used friend function.
	(imag (const ComplexColumnVector&)): Likewise.

	* dNDArray.h (real (const ComplexNDArray&)):
	Publish externally used friend function.
	(imag (const ComplexNDArray&)): Likewise.

	* dMatrix.h (operator * (const ComplexMatrix&)): 
	Move decl outside class.  No need to be friend.
	(real (const ComplexMatrix&)): Publish externally used friend function.
	(imag (const ComplexMatrix&)): Likewise.

	* CMatrix.h: (operator * (const ColumnVector&, const
	ComplexRowVector&)): Move decl outside class.  No need to be friend.
	(operator * (const ComplexColumnVector&, const RowVector&)): Likewise.
	(operator * (const ComplexColumnVector&, const ComplexRowVector& b)):
	Likewise.

2005-10-23  David Bateman  <dbateman@free.fr>
	
	* Sparse-op-defs.h (SPARSE_SPARSE_MUL): Check whether trailing zero
	elements need to be removed.
	
	* oct-sparse.h.in: Include metis headers and some macros for long/int
	versions of cholmod.
	
	* CSparse.cc (tinverse): New private function for the inversion of
	an upper triangular matrix.
	(dinverse): ditto for diagonal matrices.
	(inverse): Add SparseType as an argument. Implement matrix inverse
	using tinverse and dinverse.
	(fsolve): Use cholmod to implement Cholesky solver.
	* CSparse.h (tinverse, dinverse): Declarations
	(inverse): Alter declaration to include SparseType.

	* dSparse.cc (tinverse, dinverse, inverse, fsolve): ditto.
	* dSparse.h (tinverse, dinverse, inverse): ditto.

	* SparseType.cc: Fix complex constructor for hermitian matrices.
	
	* sparse-util.cc: New file for sparse utility functions.
	* sparse-util.h: New file with declarations of sparse utility 
	functions.
